--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "tween.js": "^16.6.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vtip": "^1.0.6",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
