--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "vtip": "^1.0.6",
     "vue-area-linkage": "^5.0.0",
     "vue-loader": "^13.3.0",
+    "vue-piczoom": "^1.0.6",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "vuex": "^3.0.1",
