--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-pdf": "^3.3.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
