--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "vue-piczoom": "^1.0.6",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
