--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dll": "webpack --config build/webpack.dll.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "build:stats": "webpack --env production --json > stats.json",
+    "analyz": "set NODE_ENV=production npm_config_report=true && npm run build"
   },
   "dependencies": {
     "vue": "^2.5.2",
@@ -26,6 +29,7 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.3.2",
+    "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
@@ -35,6 +39,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "happypack": "^5.0.0",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.3.1",
     "mockjs": "^1.0.1-beta3",
@@ -50,6 +55,7 @@
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.0.1",
+    "sass-resources-loader": "^1.3.3",
     "script-loader": "^0.7.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
@@ -65,10 +71,11 @@
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
     "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0",
-    "zepto": "^1.2.0"
+    "zepto": "^1.2.0",
+    "zip-webpack-plugin": "^2.0.0"
   },
   "engines": {
     "node": ">= 6.0.0",
