删除 打包显示性能网页

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dll": "webpack --config build/webpack.dll.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
-    "build:stats": "webpack --env production --json > stats.json",
-    "analyz": "set NODE_ENV=production npm_config_report=true && npm run build"
+    "build:stats": "webpack --env production --json > stats.json"
   },
   "dependencies": {
     "vue": "^2.5.2",
