规则模版未添加图片

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-src/axios/host.js
+/src/axios/host.js
 
 
 # Editor directories and files
@@ -17,3 +17,4 @@ src/axios/host.js
 
 # other ignore files
 config/index.js
+
