--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "autosize": "^4.0.2",
     "axios": "^0.18.0",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -45,7 +46,7 @@
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.22.1",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.10.0",
     "nprogress": "^0.2.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
