--- a/package.json
+++ b/package.json
@@ -12,72 +12,72 @@
     "build:stats": "webpack --env production --json > stats.json"
   },
   "dependencies": {
-    "autosize": "^4.0.2",
-    "highlight.js": "^9.13.1",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vuedraggable": "^2.16.0"
+    "autosize": "4.0.2",
+    "highlight.js": "9.13.1",
+    "vue": "2.5.2",
+    "vue-router": "3.0.1",
+    "vuedraggable": "2.16.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "autosize": "^4.0.2",
-    "axios": "^0.18.0",
-    "babel-core": "^6.22.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-stage-2": "^6.22.0",
-    "chalk": "^2.0.1",
-    "compression-webpack-plugin": "^2.0.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
-    "element-ui": "^2.3.7",
-    "exports-loader": "^0.7.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "happypack": "^5.0.0",
-    "html-webpack-plugin": "^2.30.1",
-    "jquery": "^3.3.1",
-    "mockjs": "^1.0.1-beta3",
-    "moment": "^2.22.1",
-    "node-notifier": "^5.1.2",
-    "node-sass": "^4.10.0",
-    "nprogress": "^0.2.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "postcss-url": "^7.2.1",
-    "rimraf": "^2.6.0",
-    "sass-loader": "^7.0.1",
-    "sass-resources-loader": "^1.3.3",
-    "script-loader": "^0.7.2",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "tween.js": "^16.6.0",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
-    "vtip": "^1.0.6",
-    "vue-area-linkage": "^5.0.0",
-    "vue-loader": "^13.3.0",
-    "vue-piczoom": "^1.0.6",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "vuedraggable": "^2.16.0",
-    "vuex": "^3.0.1",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0",
-    "zepto": "^1.2.0",
-    "zip-webpack-plugin": "^2.0.0"
+    "autoprefixer": "7.1.2",
+    "autosize": "4.0.2",
+    "axios": "0.18.0",
+    "babel-core": "6.22.1",
+    "babel-helper-vue-jsx-merge-props": "2.0.3",
+    "babel-loader": "7.1.1",
+    "babel-plugin-syntax-jsx": "6.18.0",
+    "babel-plugin-transform-runtime": "6.22.0",
+    "babel-plugin-transform-vue-jsx": "3.5.0",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-latest": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "chalk": "2.0.1",
+    "compression-webpack-plugin": "2.0.0",
+    "copy-webpack-plugin": "4.0.1",
+    "css-loader": "0.28.0",
+    "element-ui": "2.3.7",
+    "exports-loader": "0.7.0",
+    "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "1.1.4",
+    "friendly-errors-webpack-plugin": "1.6.1",
+    "happypack": "5.0.0",
+    "html-webpack-plugin": "2.30.1",
+    "jquery": "3.3.1",
+    "mockjs": "1.0.1-beta3",
+    "moment": "2.22.1",
+    "node-notifier": "5.1.2",
+    "node-sass": "4.10.0",
+    "nprogress": "0.2.0",
+    "optimize-css-assets-webpack-plugin": "3.2.0",
+    "ora": "1.2.0",
+    "portfinder": "1.0.13",
+    "postcss-import": "11.0.0",
+    "postcss-loader": "2.0.8",
+    "postcss-url": "7.2.1",
+    "rimraf": "2.6.0",
+    "sass-loader": "7.0.1",
+    "sass-resources-loader": "1.3.3",
+    "script-loader": "0.7.2",
+    "semver": "5.3.0",
+    "shelljs": "0.7.6",
+    "tween.js": "16.6.0",
+    "uglifyjs-webpack-plugin": "1.1.1",
+    "url-loader": "0.5.8",
+    "vtip": "1.0.6",
+    "vue-area-linkage": "5.0.0",
+    "vue-loader": "13.7.3",
+    "vue-piczoom": "1.0.6",
+    "vue-style-loader": "3.0.1",
+    "vue-template-compiler": "2.5.2",
+    "vuedraggable": "2.16.0",
+    "vuex": "3.0.1",
+    "webpack": "3.6.0",
+    "webpack-bundle-analyzer": "2.13.1",
+    "webpack-dev-server": "2.9.1",
+    "webpack-merge": "4.1.0",
+    "zepto": "1.2.0",
+    "zip-webpack-plugin": "2.0.0"
   },
   "engines": {
     "node": ">= 6.0.0",
