--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dll": "webpack --config build/webpack.dll.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
-    "build:stats": "webpack --env production --json > stats.json"
+    "build:stats": "webpack --env production --json > stats.json",
+    "analyz": "cross-env NODE_ENV=production npm_config_report=true npm run build"
   },
   "dependencies": {
     "autosize": "4.0.2",
@@ -33,8 +34,9 @@
     "babel-preset-latest": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "chalk": "2.0.1",
-    "compression-webpack-plugin": "2.0.0",
+    "compression-webpack-plugin": "^1.1.12",
     "copy-webpack-plugin": "4.0.1",
+    "cross-env": "^5.2.0",
     "css-loader": "0.28.0",
     "element-ui": "2.3.7",
     "exports-loader": "0.7.0",
