--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "start": "npm run dev",
     "build": "node build/build.js",
     "build:stats": "webpack --env production --json > stats.json",
-    "analyz":"npm run build --report"
+    "analyz": "npm run build --report"
   },
   "dependencies": {
     "autosize": "4.0.2",
     "highlight.js": "9.13.1",
     "vue": "2.5.2",
     "vue-router": "3.0.1",
-    "vuedraggable": "2.16.0"
+    "vuedraggable": "2.16.0",
+    "xlsx": "^0.14.3"
   },
   "devDependencies": {
     "autoprefixer": "7.1.2",
